Overflow issue on 15 inch screens fixed Socials links unavailable disabling

--- a/wp-content/themes/twentysixteen/assets/scss/layout/_construction.scss
+++ b/wp-content/themes/twentysixteen/assets/scss/layout/_construction.scss
@@ -83,8 +83,9 @@ body.page-template-tpl-under-construction {
     overflow: hidden;
 
     @include mq(medium) {
-        margin: 50px auto 15%;
+        margin-top: 50px;
     }
+
     img {
         width: auto;
         max-height: calc(50vh - #{$gutter});
